[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entitys/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Assets/low+poly+player.obj" type="ArrayMesh" id=2]

[sub_resource type="CapsuleShape" id=6]
height = 3.0

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.556863, 0.00392157, 0.00392157, 1 )
metallic = 0.5
roughness = 0.8

[node name="Enemy" type="KinematicBody" groups=[
"Guard",
]]
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 2.5, 0 )
shape = SubResource( 6 )

[node name="Timer" type="Timer" parent="."]

[node name="CSGMesh" type="CSGMesh" parent="."]
transform = Transform( -1.74846e-08, 0, -0.4, 0, 0.4, 0, 0.4, 0, -1.74846e-08, 0, 0, 0 )
mesh = ExtResource( 2 )
material = SubResource( 4 )

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="WaitTimer" to="." method="on_WaitTimer_timeout"]
